Add post install commands for Phoronix Test Suite into PTS formula

--- a/salt/roots/pts/map.jinja
+++ b/salt/roots/pts/map.jinja
@@ -2,6 +2,7 @@
     'default': {
         'pkgs': ['php-cli', 'php-xml', 'bzip2', 'time', 'numactl-devel'],
         'repo': 'https://github.com/jgartrel/af-pts-repo.git',
+        'test_suite': 'local/af-system',
         'symlink_repo': False,
         'user': 'pts',
         'home': '/home/pts'
