--- a/salt/roots/pts/map.jinja
+++ b/salt/roots/pts/map.jinja
@@ -1,10 +1,24 @@
-{% set pts = salt['grains.filter_by']({
-    'default': {
+# -*- coding: utf-8 -*-
+# vim: ft=jinja
+
+{## Start with  defaults from defaults.yaml ##}
+{% import_yaml "pts/defaults.yaml" as default_settings %}
+
+{##
+Setup variable using grains['os_family'] based logic, only add key:values here
+that differ from whats in defaults.yaml
+##}
+{% set os_family_map = salt['grains.filter_by']({
+    'Debian': {
+        'pkgs': ['git']
+    },
+    'RedHat': {
         'pkgs': ['php-cli', 'php-xml', 'bzip2', 'time', 'numactl-devel'],
-        'repo': 'https://github.com/jgartrel/af-pts-repo.git',
-        'test_suite': 'local/af-system',
-        'symlink_repo': False,
-        'user': 'pts',
-        'home': '/home/pts'
     },
 }, grain="os_family", merge=salt['pillar.get']('pts:lookup')) %}
+
+{## Merge the flavor_map to the default settings ##}
+{% do default_settings.pts.update(os_family_map) %}
+
+{## Return 'map' for use in formula ##}
+{% set pts = default_settings.pts %}
