Correct typo in nmap-ncat package name

--- a/salt/roots/pts/map.jinja
+++ b/salt/roots/pts/map.jinja
@@ -13,7 +13,7 @@ that differ from whats in defaults.yaml
         'pkgs': ['git']
     },
     'RedHat': {
-        'pkgs': ['php-cli', 'php-xml', 'bzip2', 'unzip', 'nmap-netcat',
+        'pkgs': ['php-cli', 'php-xml', 'bzip2', 'unzip', 'nmap-ncat',
                  'libtool'],
     },
 }, grain="os_family", merge=salt['pillar.get']('pts:lookup')) %}
